[Fixed] OC-773 #comment Fixed an issue related references in fields #time 1d